Fix z-index on guitar scene.

--- a/src/assets/css/theme-typography.scss
+++ b/src/assets/css/theme-typography.scss
@@ -127,4 +127,11 @@ p {
   p {
     font-size: 17px;
   }
+
+  .g-pstyle9 a,
+  .title.g-pstyle9 {
+    font-weight:700;
+    font-size:23px;
+    line-height:33px;
+  }
 }
